--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "leva": "^0.9.35",
     "lucide-react": "^0.503.0",
     "maath": "^0.10.8",
+    "pdfjs-dist": "^5.2.133",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
+    "react-katex": "^3.0.1",
+    "react-pdf": "^9.2.1",
     "react-responsive": "^10.0.0",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
