--- a/package.json
+++ b/package.json
@@ -12,29 +12,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
-    "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "^8.17.6",
-    "@react-three/postprocessing": "^2.19.1",
-    "@react-three/rapier": "^1.5.0",
-    "@types/three": "^0.168.0",
-    "@use-gesture/react": "^10.3.1",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
-    "leva": "^0.9.35",
     "lucide-react": "^0.503.0",
-    "maath": "^0.10.8",
-    "pdfjs-dist": "^5.2.133",
-    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
-    "react-katex": "^3.0.1",
-    "react-pdf": "^9.2.1",
     "react-responsive": "^10.0.0",
-    "three": "^0.167.1",
-    "three-stdlib": "^2.32.2"
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
